--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - "npm install -g bower karma grunt-cli jshint"
-  - "npm install"
+  #- "npm install"
   - "bower install"
 after_script: 
   -"grunt"
