--- a/public/bower.json
+++ b/public/bower.json
@@ -19,7 +19,8 @@
     "jquery": "^3.1.0",
     "angular-gridster": "^0.13.14",
     "angular-material": "^1.1.0",
-    "highcharts": "^4.2.6"
+    "highcharts": "^4.2.6",
+    "highcharts-ng": "^0.0.12"
   },
   "resolutions": {
     "angular": "1.5.8"
