--- a/public/bower.json
+++ b/public/bower.json
@@ -21,7 +21,7 @@
     "angular-material": "^1.1.0",
     "highcharts": "^4.2.6",
     "highcharts-ng": "^0.0.12",
-    "angular-viewport-watch": "^0.1.4"
+    "angular-viewport-watch": "git://github.com/wix/angular-viewport-watch#99b2289f4c7cbe0aa1c34414296460b40e48742"
   },
   "resolutions": {
     "angular": "1.5.8"
