--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-material": "^1.1.0",
     "highcharts": "^4.2.6",
     "highcharts-ng": "^0.0.12",
-    "angular-viewport-watch": "git://github.com/wix/angular-viewport-watch#99b2289f4c7cbe0aa1c34414296460b40e48742"
+    "angular-viewport-watch": "git://github.com/wix/angular-viewport-watch#99b2289f4c7cbe0aa1c34414296460b40e48742",
+    "angular-translate": "^2.13.1"
   },
   "resolutions": {
     "angular": "1.5.8"
